added cacheableDuration to http4k create query. create query responds with the name of the created query